syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Warehouse.ReturnSalesMan.Protos";
option java_multiple_files = true;
option objc_class_prefix = "HLW";
option java_package = "com.saphamrah.protos";
option java_outer_classname = "ReturnSalesManByInvoiceRequestTitleProto";
package Warehouse;


service ReturnSalesManByInvoiceRequestTitle{
  rpc GetReturnSalesManByInvoiceRequestTitle(ReturnSalesManByInvoiceRequestTitleRequest) returns(ReturnSalesManByInvoiceRequestTitleReplyList);
}

message ReturnSalesManByInvoiceRequestTitleRequest{

  string RowTitleType = 1;
  string DraftRequestID = 2;
}

message ReturnSalesManByInvoiceRequestTitleReply{
  int32	ReturnAnnouncementPPC = 1;
  int64	InvoiceRequestID=2;
  int32	SalesManID=3;
  int32	CustomerID=4;
  string	ReturnAnnouncementDate=5;
  string	Reason=6;
  int32	ReturnItemsQuantity=7;


}

message ReturnSalesManByInvoiceRequestTitleReplyList{
  repeated ReturnSalesManByInvoiceRequestTitleReply ReturnSalesManByInvoiceRequestTitles = 1;
}